tests/NormalTests/paczka1/small_fuzzy/62244577.err
Error in line 1: w0V A379 88,8
Error in line 6: n9Eg S523 -5,9
Error in line 10: w0V S86 -4,2
Error in line 4: w0V S86 76,5
